objects/Monthly_Samples_By_Doctor_Snapshot__c.object
<CustomObject>
    <description>Monthly Samples By Doctor, help track superusers</description>
    <fields>
        <fullName>Account_Name__c</fullName>
        <label>Account Name</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Bucket__c</fullName>
        <formula>IF( Total_Samples__c == 0,&quot;Low&quot;, &quot;High&quot;)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Bucket</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Doctor_Name__c</fullName>
        <label>Doctor Name</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Owner__c</fullName>
        <label>Owner</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Sample_Date_Received__c</fullName>
        <label>Sample Date Received</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Total_Samples__c</fullName>
        <label>Total Samples</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <label>Monthly Samples By Doctor Snapshot</label>
    <nameField>
        <label>Monthly Samples By Doctor Snapshot Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Monthly Samples By Doctor Snapshots</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>